# j-pet-framework

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  DBConfig  Doxyfile  Doxyfile.in  INSTALL  INSTALL.md  INSTALL~  JPetFramework_LinkDef.h  JPetLogger.cpp  JPetLogger.h  JPetLoggerInclude.h  Jenkinsfile  Makefile  Makefile~  NOTICE  README  README.md  Sig.cpp  TDCHit.h  all_data.sha  allowedUserOptionTypes.json  diffA.txt  diffTODO.txt  diffTRefs.txt  diffYY.txt  download_data.sh  linkdef.h  main.cpp  option.txt  thisframework.sh.in  update_checksums.sh  version.h.in
AnalysisExample/: README  (+23 more)
ScopeReaderExample/: .gitignore  CMakeLists.txt  README  main.cpp  run.sh
ScopeReaderExample/cfg/: example.info  example.xml
gate_converter/: CMakeLists.txt  GateHitLinkDef.h  Reader.cpp  Reader.h  Writer.cpp  Writer.h  main.cpp
src/: CMakeLists.txt  CMakeListsUnpacker2.txt.in  JPetFrameworkConfig.cmake.in  JPetFramework_LinkDef.h  thisframework.sh
src/Core/: JPetLoggerInclude.h
src/Core/JPetAnalysisTools/: JPetAnalysisTools.cpp
src/Core/JPetCachedFunction/: JPetCachedFunction.cpp
src/Core/JPetCmdParser/: JPetCmdParser.cpp
src/Core/JPetCommonTools/: JPetCommonTools.cpp
src/Core/JPetData/: JPetData.cpp
src/Core/JPetDataInterface/: JPetDataInterface.cpp
src/Core/JPetGeomMapping/: JPetGeomMapping.cpp
src/Core/JPetLogger/: JPetLogger.cpp  JPetTMessageHandler.cpp
src/Core/JPetManager/: JPetManager.cpp
src/Core/JPetParamAndDataFactory/: JPetParamAndDataFactory.cpp
src/Core/JPetProgressBarManager/: JPetProgressBarManager.cpp
src/Core/JPetReader/: JPetReader.cpp
src/Core/JPetScopeData/: JPetScopeData.cpp
src/Core/JPetStatistics/: JPetStatistics.cpp
src/Core/JPetTask/: JPetTask.cpp
src/Core/JPetTaskChainExecutor/: JPetTaskChainExecutor.cpp
src/Core/JPetTaskFactory/: JPetTaskFactory.cpp
src/Core/JPetTaskIO/: JPetInputHandler.cpp  JPetInputHandlerHLD.cpp  JPetInputHandlerROOT.cpp  JPetOutputHandler.cpp  JPetTaskIO.cpp  JPetTaskIOTools.cpp
src/Core/JPetTaskIOLoopPerSubTask/: JPetTaskIOLoopPerSubTask.cpp
src/Core/JPetTaskLooper/: JPetTaskLooper.cpp
src/Core/JPetTaskStreamIO/: JPetTaskStreamIO.cpp
src/Core/JPetTimer/: JPetTimer.cpp
src/Core/JPetTreeHeader/: JPetTreeHeader.cpp
src/Core/JPetUnpacker/: JPetUnpacker.cpp
src/Core/JPetUserTask/: JPetUserTask.cpp
src/Core/JPetWriter/: JPetWriter.cpp
src/DataObjects/JPetBaseHit/: JPetBaseHit.cpp
src/DataObjects/JPetBaseSignal/: JPetBaseSignal.cpp
src/DataObjects/JPetEvent/: JPetEvent.cpp
src/DataObjects/JPetHit/: JPetHit.cpp
src/DataObjects/JPetHitUtils/: JPetHitUtils.cpp
src/DataObjects/JPetLOR/: JPetLOR.cpp
src/DataObjects/JPetMCRecoHit/: JPetMCRecoHit.cpp
src/DataObjects/JPetMatrixSignal/: JPetMatrixSignal.cpp
src/DataObjects/JPetPhysRecoHit/: JPetPhysRecoHit.cpp
src/DataObjects/JPetPhysSignal/: JPetPhysSignal.cpp
src/DataObjects/JPetRawSignal/: JPetRawSignal.cpp
src/DataObjects/JPetRecoHit/: JPetRecoHit.cpp
src/DataObjects/JPetRecoSignal/: JPetRecoSignal.cpp
src/DataObjects/JPetSigCh/: JPetSigCh.cpp
src/DataObjects/JPetTimeWindow/: JPetTimeWindow.cpp
src/GateParser/JPetGateParser/: JPetGateParser.cpp
src/GateParser/JPetGateTransformer/: JPetGateTransformer.cpp
src/GateParser/JPetGateTreeReader/: JPetGateTreeReader.cpp
src/GeantParser/JPetGeantDecayTree/: JPetGeantDecayTree.cpp
src/GeantParser/JPetGeantEventInformation/: JPetGeantEventInformation.cpp
src/GeantParser/JPetGeantEventPack/: JPetGeantEventPack.cpp
src/GeantParser/JPetGeantParser/: JPetGeantParser.cpp  JPetGeantParserTools.cpp
src/GeantParser/JPetGeantScinHits/: JPetGeantScinHits.cpp
src/GeantParser/JPetRandom/: JPetRandom.cpp
src/GeantParser/JPetSmearingFunctions/: JPetSmearingFunctions.cpp  JPetSmearingFunctionsNew.cpp
src/MC/JPetBaseMCHit/: JPetBaseMCHit.cpp
src/MC/JPetMCDecayTree/: JPetMCDecayTree.cpp
src/MC/JPetMCHit/: JPetMCHit.cpp
src/MC/JPetRawMCHit/: JPetRawMCHit.cpp
src/MC/JPetTimeWindowMC/: JPetTimeWindowMC.cpp
src/Options/JPetOptionValidator/: JPetAdditionalValidators.cpp  JPetOptionValidator.cpp
src/Options/JPetOptionsGenerator/: JPetAdditionalTransformations.cpp  JPetOptionsGenerator.cpp  JPetOptionsGeneratorTools.cpp  JPetOptionsTypeHandler.cpp
src/Options/JPetOptionsTools/: JPetOptionsTools.cpp  JPetOptionsTransformators.cpp
src/ParamObjects/JPetBarrelSlot/: JPetBarrelSlot.cpp  JPetBarrelSlotFactory.cpp
src/ParamObjects/JPetChannel/: JPetChannel.cpp  JPetChannelFactory.cpp
src/ParamObjects/JPetDataModule/: JPetDataModule.cpp  JPetDataModuleFactory.cpp
src/ParamObjects/JPetDataSource/: JPetDataSource.cpp  JPetDataSourceFactory.cpp
src/ParamObjects/JPetFEB/: JPetFEB.cpp  JPetFEBFactory.cpp
src/ParamObjects/JPetFrame/: JPetFrame.cpp  JPetFrameFactory.cpp
src/ParamObjects/JPetLayer/: JPetLayer.cpp  JPetLayerFactory.cpp
src/ParamObjects/JPetMatrix/: JPetMatrix.cpp  JPetMatrixFactory.cpp
src/ParamObjects/JPetPM/: JPetPM.cpp  JPetPMFactory.cpp
tests/: CMakeLists.txt  createTest  ld_lib.sh  run_tests.pl
tests/JPetCmdParserTest/: JPetCmdParserTest.cpp
tests/JPetDBParamGetterTest/: JPetDBParamGetterTest.cpp
tests/JPetHLDReaderTest/: JPetHLDReaderTest.cpp
tests/JPetLORTest/: JPetLORTest.cpp
tests/JPetLayerTest/: JPetLayerTest.cpp
tests/JPetManagerTest/: JPetManagerTest.cpp
tests/JPetPMTest/: JPetPMTest.cpp
tests/JPetParamManagerTest/: testDataFile.txt
tests/JPetParamUtilsTest/: JPetParamUtilsTest.cpp
tests/JPetRawSignalTest/: JPetRawSignalTest.cpp
tests/JPetReaderTest/: JPetReaderTest.cpp
tests/JPetRecoSignalTest/: JPetRecoSignalTest.cpp
tests/JPetScinTest/: JPetScinTest.cpp
tests/JPetScopeReaderTest/: JPetScopeReaderTest.cpp  test_file.info
tests/JPetSigChTest/: JPetSigChTest.cpp
tests/JPetSimplePhysSignalRecoTest/: configParams.cfg
tests/JPetTaskLoaderTest/: JPetTaskLoaderTest.cpp
tests/JPetTaskTest/: JPetTaskTest.cpp
tests/JPetTimeWindowTest/: JPetTimeWindowTest.cpp
tests/JPetWriterTest/: JPetWriterTest.cpp
tests/ROOTExamples/: README  TestLinkDef.h
tests/templates/: _TestTemplateFile_
(+1626 files in other folders)
